// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`not render second true condition 1`] = `
<span>
  <span>
    Test 1
  </span>
</span>
`;

exports[`render otherwise 1`] = `
<span>
  <span>
    Otherwise
  </span>
</span>
`;

exports[`render second condition, first is false, and second is true 1`] = `
<span>
  <span>
    Test 2
  </span>
</span>
`;

exports[`render string when first condition true 1`] = `null`;
